src/AppBundle/Resources/public/css/base.css
/***** Main styles *****/

body {
    font-family : "Hind", sans-serif;
    font-size   : 1.8em;
}

body, html {
    height : 100%;
}

#wrap {
    min-height : calc(100% - 55px);
}

a {
    color       : #df1c0d;
    font-weight : bold !important;
}

hr {
    border-color : #df1c0d;
    width        : 90%;
}

h1, h2, h3, h4, h5 {
    font-weight : bold;
}

.shadow {
    -webkit-box-shadow : 0 6px 12px rgba(0, 0, 0, .175);
    -moz-box-shadow    : 0 6px 12px rgba(0, 0, 0, .175);
    box-shadow         : 0 6px 12px rgba(0, 0, 0, .175);
}

.inner-shadow-top {
    -moz-box-shadow    : inset 0 5px 10px 0 #000;
    -webkit-box-shadow : inset 0 5px 10px 0 #000;
    box-shadow         : inset 0 5px 10px 0 #000;
}

.inner-shadow-bottom {
    -moz-box-shadow    : inset 0 -5px 10px 0 #000;
    -webkit-box-shadow : inset 0 -5px 10px 0 #000;
    box-shadow         : inset 0 -5px 10px 0 #000;
}

/***** Header *****/

.header {
}

.beta {
    font-family : "Shadows Into Light", sans-serif;
}

h3 {
    display : block;
}

/***** Navigation *****/

.navbar {
    border-radius  : 0;
    margin-bottom  : 0;
    padding-top    : 0.5em;
    padding-bottom : 0.5em;
    text-shadow    : 2px 2px 6px rgba(0, 0, 0, .7);
}

.navbar-nav li a {
    transition    : color 1s;
    padding-left  : 0.4em !important;
    padding-right : 0.4em !important;
    margin-right  : 1em !important;
    margin-left   : 1em !important;
}

.navbar-nav li a:hover {
    color      : #ff9b26 !important;
    transition : color 1s, box-shadow 1s;
}

.navbar-inverse {
    background-color : rgba(0, 0, 0, 0.64);
    border-color     : transparent;
}

.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
    background-color : transparent;
    border-bottom    : 1px solid rgb(228, 79, 79);
}

.navbar-inverse .navbar-nav > li > a {
    font-weight    : 800;
    padding        : 5px 0;
    letter-spacing : 2px;
    margin         : 10px 20px 10px 20px;
    color          : #fff;
}

.navbar-inverse .navbar-brand, .navbar-inverse .navbar-brand:hover {
    color       : #fff;
    font-weight : 900;
}

#navbar-button {
    background-color : #707070;
    color            : #f8f8f8;
    border           : 2px #3a3a3a solid;
    border-radius    : 0;
}

/***** Section *****/

section {
    padding : 0.5em 0;
}

section#content {
}

/***** Footer *****/

footer {
    padding-top      : 1em;
    padding-bottom   : 1em;
    background-color : rgba(0, 0, 0, 0.7);
    height           : 55px;
}

footer .copyright,
footer .share a {
    text-shadow : 2px 2px 6px rgba(0, 0, 0, .7);
}

footer a {
    color : white !important;
}

footer a:hover {
    cursor          : pointer;
    text-decoration : none;
}

/* Footer / Share button */
share-button,
share-button:after,
share-button:before {
    background : none !important;
    content    : '' !important;
    color      : transparent !important;
    cursor     : default;
}

share-button a:hover {
    color : transparent !important;
}

footer .share {
    text-align    : right;
    padding-right : 2em;
}

/***** Boxes *****/

/***** Forms *****/

form input[type=submit] {
}

form .group {
    border        : 2px rgba(0, 0, 0, 0.42) solid;
    border-radius : 5px;
    padding       : 1em;
    margin-bottom : 1em;
}

form .group p {
    font-style : italic;
    font-size  : 0.8em;
}

form .group h3 {
    margin-top : 0 !important;
}

form .form-group {
}

.multiselect-container.dropdown-menu {
    z-index    : 10;
    box-shadow : none;
    width      : 100%;
    position   : relative;
}

#contact textarea {
    height : 10em;
}

#recaptcha-container {
    padding-top              : 1em;
    transform                : scale(0.7);
    -webkit-transform        : scale(0.7);
    transform-origin         : 0 0;
    -webkit-transform-origin : 0 0;
}

.disabled {
    color      : #666;
    font-style : italic;
    display    : none;
}

.form-group {
    /*margin : 2em 0 !important;*/
}

label {
    /*font-size : 1.1em;*/
}

/***** Buttons *****/

.button-custom {
    border-radius         : 0;
    -webkit-border-radius : 0;
    -moz-border-radius    : 0;
    -webkit-transition    : all 0.5s ease-in-out;
    -moz-transition       : all 0.5s ease-in-out;
    -o-transition         : all 0.5s ease-in-out;
    transition            : all 0.5s ease-in-out;
    margin                : 5px;
}

.btn-custom-three {
    color            : #fff;
    background-color : #777777;
    border           : 2px solid #4c4c4c;
    font-size        : 1em;
    font-weight      : bold;
    padding          : 0.5em;
}

.btn-custom-three:hover {
    border           : 2px solid black;
    text-decoration  : none;
    color            : #fff;
    background-color : #4c4c4c;
}

/***** Posts *****/

#comments {
    margin-top     : 1em;
    margin-bottom  : 1em;
    padding-top    : 1em;
    padding-bottom : 1em;
    border-width   : 1px 0;
    border-style   : solid;
    border-color   : #888;
}

#post-comment {
    margin-top : 1em;
}

.post h1 {
    font-size : 1.5em;
}

.comments h2 {
    margin-top  : 0;
    font-size   : 1.2em;
    font-weight : bold;
}

.comments h3 {
    font-size   : 1.1em;
    margin      : 0;
    font-weight : bold;
}

.posts dt {
    font-size   : larger;
    font-weight : bold;
}

.post .date,
.comment .date {
    font-style : italic;
}

.post .body {
    margin-top : 1em;
}

.post .comment-count {
    text-align : right;
}

form#contact input[type=submit] {
    /*margin-right : 0 !important;*/
}

.comment {
    margin-top    : 1em;
    margin-bottom : 1em;
}

.comment .body {
    border            : 0 dashed #888;
    border-left-width : 1px;
    display           : ruby;
    padding-right     : 1em;
}

